REGRESSION(r208791): Assertion in testb3 https://bugs.webkit.org/show_bug.cgi?id=165651

Reviewed by Saam Barati.

Accidentally we always use edx/rdx for the result of UDiv/UMod.
But it is incorrect. We should use eax/rax for the result of UDiv.

* b3/B3LowerToAir.cpp:
(JSC::B3::Air::LowerToAir::lowerX86UDiv):

Canonical link: https://commits.webkit.org/183314@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209658 268f45cc-cd09-0410-ab3c-d52691b4dbfc